--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@mantine/form": "^7.9.2",
     "@mantine/hooks": "^7.9.2",
     "@tabler/icons-react": "^3.4.0",
+    "axios": "^1.7.2",
     "postcss-preset-mantine": "^1.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
